[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/graphics/pictures/Bruno.png" type="Texture" id=1]
[ext_resource path="res://scripts/cell.gd" type="Script" id=2]
[ext_resource path="res://scenes/glow.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/animations/glow.tres" type="Animation" id=4]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../glow:material:shader_param/intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[node name="cell" type="Area2D"]
script = ExtResource( 2 )

[node name="glow" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 0.678431, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 2 )
anims/glow = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 100, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_cell_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_cell_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_cell_mouse_exited"]
